--- a/dashboard.html
+++ b/dashboard.html
@@ -181,6 +181,7 @@
 
         .table-section {
             margin-top: 40px;
+            overflow-x: auto; /* Ensure tables are scrollable on small screens */
         }
 
         table {
